Fix nav logo SVG spacing: negative margin to counteract letter-spacing gap

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -138,6 +138,10 @@ nav.site-nav {
   text-transform: uppercase;
 }
 
+.nav-logo svg {
+  margin-right: -0.08em;
+}
+
 .nav-links {
   display: flex;
   align-items: center;
